--- a/index.html
+++ b/index.html
@@ -7,6 +7,30 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    
+    <!--Header-->
+    <header>
+        <h1>Top 5 Rock Bands</h1>
+
+    </header>
+    <!--Main-->
+    <main>
+        <div class="sidebar">
+            <ul>
+                <li>Pink Floyd</li>
+                <li>Nirvana</li>
+                <li>Led Zepplin</li>
+                <li>The Beatles</li>
+                <li>The Rolling Stones</li>
+            </ul>
+        </div>
+        <div class="content">
+
+        </div>
+
+    </main>
+    <!--Footer-->
+    <footer> 
+        ©   Rix FJS(24) - Sara, Stella, Antonio, Aleksa
+    </footer>
 </body>
 </html>
