--- a/index.html
+++ b/index.html
@@ -16,11 +16,11 @@
     <main>
         <div class="sidebar">
             <ul>
-                <li>Pink Floyd</li>
-                <li>Nirvana</li>
-                <li>Led Zepplin</li>
-                <li>The Beatles</li>
-                <li>The Rolling Stones</li>
+                <li><a href="">Pink Floyd</a></li>
+                <li><a href="">Nirvana</a></li>
+                <li><a href="">Led Zepplin</a></li>
+                <li><a href="">The Beatles</a></li>
+                <li><a href="">The Rolling Stones</a></li>
             </ul>
         </div>
         <div class="content">
