--- a/index.html
+++ b/index.html
@@ -18,13 +18,52 @@
             <ul>
                 <li><a href="">Pink Floyd</a></li>
                 <li><a href="">Nirvana</a></li>
-                <li><a href="">Led Zepplin</a></li>
+                <li><a href="">Led Zeppelin</a></li>
                 <li><a href="">The Beatles</a></li>
                 <li><a href="">The Rolling Stones</a></li>
             </ul>
         </div>
         <div class="content">
-
+            <!--Pink Floyd-->
+            <div>
+                <h2 class="band-name">Pink Floyd</h2>
+                <p></p>
+                <p></p>
+                <p></p>
+                <p></p>
+            </div>
+            <!--Nirvana-->
+            <div>
+                <h2 class="band-name">Nirvana</h2>
+                <p></p>
+                <p></p>
+                <p></p>
+                <p></p>
+            </div>
+            <!--Led Zeppelin-->
+            <div>
+                <h2 class="band-name">Led Zeppelin</h2>
+                <p></p>
+                <p></p>
+                <p></p>
+                <p></p>
+            </div>
+            <!--The Beatles-->
+            <div>
+                <h2 class="band-name">The Beatles</h2>
+                <p></p>
+                <p></p>
+                <p></p>
+                <p></p>
+            </div>
+            <!--The Rolling Stones-->
+            <div>
+                <h2 class="band-name">The Rolling Stones</h2>
+                <p></p>
+                <p></p>
+                <p></p>
+                <p></p>
+            </div>
         </div>
 
     </main>
