added fixed side bar and auto scrolling when clicking title

--- a/index.html
+++ b/index.html
@@ -12,20 +12,21 @@
         <h1>Top 5 Rock Bands</h1>
 
     </header>
+
     <!--Main-->
     <main>
         <div class="sidebar">
             <ul>
-                <li><a href="">Pink Floyd</a></li>
-                <li><a href="">Nirvana</a></li>
-                <li><a href="">Led Zeppelin</a></li>
-                <li><a href="">The Beatles</a></li>
-                <li><a href="">The Rolling Stones</a></li>
+                <li><a href="#pink-floyd">Pink Floyd</a></li>
+                <li><a href="#nirvana">Nirvana</a></li>
+                <li><a href="#led-zeppelin">Led Zeppelin</a></li>
+                <li><a href="#beatles">The Beatles</a></li>
+                <li><a href="#rolling-stones">The Rolling Stones</a></li>
             </ul>
         </div>
         <div class="content">
             <!--Pink Floyd-->
-            <div class="band-info">
+            <div class="band-info" id="pink-floyd">
                 <h2 class="band-name">Pink Floyd</h2>
                 <p> <strong>Orgin: </strong>London, England</p>
                 <p><strong>Active: </strong>1965 - 1995, occasional reunions</p>
@@ -33,7 +34,7 @@
                 <p><strong>Why they're famous: </strong>Known for their progressive rock sound, Pink Floyd’s concept albums, such as The Dark Side of the Moon and The Wall, are renowned for their philosophical lyrics and elaborate stage shows.</p>
             </div>
             <!--Nirvana-->
-            <div class="band-info">
+            <div class="band-info" id="nirvana">
                 <h2 class="band-name">Nirvana</h2>
                 <p> <strong>Orgin: </strong>Seattle, USA </p>
                 <p><strong>Active: </strong>1987 - 1994</p>
@@ -41,7 +42,7 @@
                 <p><strong>Why they're famous: </strong>As one of the defining bands of the 1990s grunge movement, Nirvana brought alternative rock to mainstream audiences. Their raw sound and Kurt Cobain’s introspective lyrics left a lasting influence on modern rock music.</p>
             </div>
             <!--Led Zeppelin-->
-            <div class="band-info">
+            <div class="band-info" id="led-zeppelin">
                 <h2 class="band-name">Led Zeppelin</h2>
                 <p> <strong>Orgin: </strong>London, England</p>
                 <p><strong>Active: </strong>1968 - 1980</p>
@@ -49,7 +50,7 @@
                 <p><strong>Why they're famous: </strong>Led Zeppelin are pioneers of hard rock and heavy metal, blending blues with powerful guitar riffs. Their iconic songs have left a lasting impact on rock music.</p>
             </div>
             <!--The Beatles-->
-            <div class="band-info">
+            <div class="band-info" id="beatles">
                 <h2 class="band-name">The Beatles</h2>
                 <p> <strong>Orgin: </strong>Liverpool, England</p>
                 <p><strong>Active: </strong>1960 - 1970</p>
@@ -57,7 +58,7 @@
                 <p><strong>Why they're famous: </strong>The Beatles revolutionized music with their innovative songwriting, experimental studio techniques, and immense cultural influence. They are one of the best-selling and most influential bands of all time.</p>
             </div>
             <!--The Rolling Stones-->
-            <div class="band-info">
+            <div class="band-info" id="rolling-stones">
                 <h2 class="band-name">The Rolling Stones</h2>
                 <p> <strong>Orgin: </strong>London, England</p>
                 <p><strong>Active: </strong>1962 - present</p>
