--- a/index.html
+++ b/index.html
@@ -17,11 +17,11 @@
     <main>
         <div class="sidebar">
             <ul>
-                <li><a href="#pink-floyd">Pink Floyd</a></li>
-                <li><a href="#nirvana">Nirvana</a></li>
-                <li><a href="#led-zeppelin">Led Zeppelin</a></li>
-                <li><a href="#beatles">The Beatles</a></li>
-                <li><a href="#rolling-stones">The Rolling Stones</a></li>
+                <li><a href="#pink-floyd"><strong>Pink Floyd</strong></a></li><br>
+                <li><a href="#nirvana"><strong>Nirvana</strong></a></li><br>
+                <li><a href="#led-zeppelin"><strong>Led Zeppelin</strong></a></li><br>
+                <li><a href="#beatles"><strong>The Beatles</strong></a></li><br>
+                <li><a href="#rolling-stones"><strong>The Rolling Stones</strong></a></li>
             </ul>
         </div>
         <div class="content">
@@ -30,7 +30,7 @@
                 <h2 class="band-name">Pink Floyd</h2>
                 <p> <strong>Orgin: </strong>London, England</p>
                 <p><strong>Active: </strong>1965 - 1995, occasional reunions</p>
-                <p><strong>Key Hits: </strong>"Comfortable numb", "Wish you were here", "Another brick in the wall"</p>
+                <p><strong>Key Hits: </strong>"Comfortable numb", "Wish you were here", "Another brick in the wall"</p><br>
                 <p><strong>Why they're famous: </strong>Known for their progressive rock sound, Pink Floyd’s concept albums, such as The Dark Side of the Moon and The Wall, are renowned for their philosophical lyrics and elaborate stage shows.</p>
             </div>
             <!--Nirvana-->
@@ -38,7 +38,7 @@
                 <h2 class="band-name">Nirvana</h2>
                 <p><strong>Orgin: </strong>Seattle, USA </p>
                 <p><strong>Active: </strong>1987 - 1994</p>
-                <p><strong>Key Hits: </strong>"Smells like teen spirit", "Come as you are", "Lithium"</p>
+                <p><strong>Key Hits: </strong>"Smells like teen spirit", "Come as you are", "Lithium"</p><br>
                 <p><strong>Why they're famous: </strong>As one of the defining bands of the 1990s grunge movement, Nirvana brought alternative rock to mainstream audiences. Their raw sound and Kurt Cobain’s introspective lyrics left a lasting influence on modern rock music.</p>
             </div>
             <!--Led Zeppelin-->
@@ -46,7 +46,7 @@
                 <h2 class="band-name">Led Zeppelin</h2>
                 <p> <strong>Orgin: </strong>London, England</p>
                 <p><strong>Active: </strong>1968 - 1980</p>
-                <p><strong>Key Hits: </strong>"Stairway to heaven", "Whole lotta love", "Kashmir"</p>
+                <p><strong>Key Hits: </strong>"Stairway to heaven", "Whole lotta love", "Kashmir"</p><br>
                 <p><strong>Why they're famous: </strong>Led Zeppelin are pioneers of hard rock and heavy metal, blending blues with powerful guitar riffs. Their iconic songs have left a lasting impact on rock music.</p>
             </div>
             <!--The Beatles-->
@@ -54,7 +54,7 @@
                 <h2 class="band-name">The Beatles</h2>
                 <p> <strong>Orgin: </strong>Liverpool, England</p>
                 <p><strong>Active: </strong>1960 - 1970</p>
-                <p><strong>Key Hits: </strong>"Hey Jude", "Let it be", "Come Together”</p>
+                <p><strong>Key Hits: </strong>"Hey Jude", "Let it be", "Come Together”</p><br>
                 <p><strong>Why they're famous: </strong>The Beatles revolutionized music with their innovative songwriting, experimental studio techniques, and immense cultural influence. They are one of the best-selling and most influential bands of all time.</p>
             </div>
             <!--The Rolling Stones-->
@@ -62,7 +62,7 @@
                 <h2 class="band-name">The Rolling Stones</h2>
                 <p> <strong>Orgin: </strong>London, England</p>
                 <p><strong>Active: </strong>1962 - present</p>
-                <p><strong>Key Hits: </strong>"Paint It Black," "(I Can’t Get No) Satisfaction," "Gimme Shelter"</p>
+                <p><strong>Key Hits: </strong>"Paint It Black," "(I Can’t Get No) Satisfaction," "Gimme Shelter"</p><br>
                 <p><strong>Why they're famous: </strong>Known for their blues-inspired rock sound, rebellious image, and energetic performances, The Rolling Stones have maintained a massive fanbase for over six decades.</p>
             </div>
         </div>
