header styling adjustments

--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 <body>
     <!--Header-->
     <header>
-        <h1>Top 5 Rock Bands</h1>
+        <h1>★ Top 5 Rock Bands ★</h1>
 
     </header>
 
